--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "fabric": "^6.7.1",
     "imagekit": "^6.0.0",
     "lucide-react": "^0.543.0",
-    "next": "^16.0.7",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.7",
